--- a/src/client/styles/main.css
+++ b/src/client/styles/main.css
@@ -1,54 +1,71 @@
-*{
-    box-sizing: border-box;
-    margin: 5px;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 5px;
+  padding: 0;
+  text-align: center;
 }
-body{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    background: #f5f5f5;
-    min-height: 100vh;
-    width: 100%;
-    padding: 0;
+body {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
 }
-body *{
-    min-width: 60%;
+nav {
+  display: flex !important;
+  justify-content: space-between !important;
+  align-items: center !important;
 }
-header{
-    width: 100%;
+ul {
+  list-style: none;
+}
+main {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  height: 60vh;
+}
+.container-fluid {
+  display: flex !important;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+footer {
+  text-align: center !important;
+  display: block !important;
+}
+@media (max-width: 400px) {
+  body {
+    min-height: 120vh;
+  }
+  main {
+    height: 90vh;
+  }
+}
+@media (max-width: 400px) {
+  body {
+    min-height: 120vh;
+  }
+  main {
+    height: 90vh;
+  }
+}
+@media (max-width: 350px) {
+  body {
+    min-height: 120vh;
+  }
+  main {
+    height: 90vh;
+  }
+  .container-fluid {
     margin: 0 !important;
-    padding: 0;
-}
-nav, footer{
+  }
+  ul {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     flex-wrap: wrap;
-    width: 100%;
-    margin: 0 !important;
-    color: #f5f5f5;
-    padding: 0 5px 0 5px;
-}
-button{
-    border: none;
-    max-width: 50px;
-}
-ul{
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0;
-    min-width: 40% !important;
-}
-li{
-    padding: 0;
-    min-width: 20% !important;
-}
-@media screen and (max-width: 400px){
-    nav ul{
-        width: 100% !important;
-    }
+  }
+  button {
+    margin: 10px 20%;
+  }
 }
